Revision history for Mojolicious-Plugin-LinkEmbedder

0.20
       * Add support for appear.in

0.19     Sun Jan 18 17:15:33 2015
       * Add support for travis-ci.org links

0.18     Thu Jan 15 23:08:24 2015
       * Fix escaping markup when embedding HTML pages #13
         This includes Github links
       * Will only learn meta information from HTML if response is success #14
       * Video will have controls #12
       * Twitter cards will embed media
       * Remove cache_cb attribute
       * Add caching to predefined handler
         Marked caching as EXPERIMENTAL

0.17     Sun Jan  4 16:54:01 2015
       * Will not run online tests from cpantesters

0.16     Fri Jan  2 14:19:51 2015
       * Add support for xkcd.com image embedding

0.15     Sun Nov 16 14:11:43 2014
       * Fix test containing date
       * Skip tests that require connection to internet

0.14     Thu Nov 13 18:50:15 2014
       * Add support for links from metacpan.org
       * More robust tests

0.13     Wed Oct 22 20:49:23 2014
       * Fix failing video-youtube.t and -vimeo.t

0.12     Sun Oct 19 15:19:41 2014
       * Fix reading media_id in Link::Text::HTML

0.11     Sun Oct 19 13:30:27 2014
       * Fix Video::Dbtv iframe src
       * Fix handling https://www.youtube.com/user/jsconfeu
       * Add support for git.io links
       * Add support for github commit messages
       * Add cache capabilities
       * Remove string overload of Link objects

0.10     Fri Oct 17 14:07:37 2014
       * Add LinkEmbedder::Text::Github
       * Fix embedding Youtube videos over HTTPS
       * Fix embedding Ted videos over HTTPS
       * Change to embedding tweets using javascript

0.09     Sun Oct 12 20:46:49 2014
       * Change link_embedder_text_gist_github_x() javascript methods to public

0.08     Sun Oct 12 19:37:18 2014
       * Add support for scraping information from a HTML page
         - Understands Open Graph and Twitter cards